--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,6 +38,21 @@
   @apply bg-transparent border border-brand-black rounded-md p-2 
 }
 
+@layer utilities {
+  @variants responsive {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+    }
+  }
+}
+
 /* scrollbar */
 /* width */
 ::-webkit-scrollbar {
